--- a/socialNetwork/CMakeLists.txt
+++ b/socialNetwork/CMakeLists.txt
@@ -3,6 +3,8 @@ project(social_network_microservices)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_COMPILER clang++-9)
+set(CMAKE_C_COMPILER clang-9)
 set(CMAKE_CXX_FLAGS "-O3")
 set(CMAKE_INSTALL_PREFIX /usr/local/bin)
 
