--- a/socialNetwork/src/CMakeLists.txt
+++ b/socialNetwork/src/CMakeLists.txt
@@ -39,15 +39,15 @@ endif()
 
 set(THRIFT_GEN_CPP_DIR ../../gen-cpp)
 
-add_subdirectory(TextService)
+#add_subdirectory(TextService)
 add_subdirectory(UniqueIdService)
 add_subdirectory(UserService)
 add_subdirectory(SocialGraphService)
 # add_subdirectory(WriteHomeTimelineService)
-add_subdirectory(PostStorageSerivce)
-add_subdirectory(UserTimelineService)
-add_subdirectory(ComposePostService)
-add_subdirectory(UserMentionService)
-add_subdirectory(UrlShortenService)
-add_subdirectory(MediaService)
-add_subdirectory(HomeTimelineService)
+#add_subdirectory(PostStorageSerivce)
+#add_subdirectory(UserTimelineService)
+#add_subdirectory(ComposePostService)
+#add_subdirectory(UserMentionService)
+#add_subdirectory(UrlShortenService)
+#add_subdirectory(MediaService)
+#add_subdirectory(HomeTimelineService)
