--- a/socialNetwork/src/UserService/CMakeLists.txt
+++ b/socialNetwork/src/UserService/CMakeLists.txt
@@ -30,3 +30,43 @@ target_link_libraries(
 )
 
 install(TARGETS UserService DESTINATION ./)
+
+add_library(
+    UserServiceLLVM
+    UserService.cpp
+    ${THRIFT_GEN_CPP_DIR}/UserService.cpp
+    ${THRIFT_GEN_CPP_DIR}/social_network_types.cpp
+    ${THRIFT_GEN_CPP_DIR}/SocialGraphService.cpp
+)
+
+
+target_include_directories(
+    UserServiceLLVM PRIVATE
+    ${LIBMEMCACHED_INCLUDE_DIR}
+    ${MONGOC_INCLUDE_DIRS}
+    /usr/local/include/jwt
+    /usr/local/include/jaegertracing
+)
+
+target_link_libraries(
+    UserServiceLLVM
+    ${MONGOC_LIBRARIES}
+    ${LIBMEMCACHED_LIBRARIES}
+    nlohmann_json::nlohmann_json
+    ${THRIFT_LIB}
+    ${CMAKE_THREAD_LIBS_INIT}
+    ${Boost_LIBRARIES}
+    Boost::log
+    Boost::log_setup
+    jaegertracing
+    OpenSSL::SSL
+)
+
+target_compile_options(
+    UserServiceLLVM BEFORE
+    PRIVATE "-emit-llvm"
+)
+
+install(TARGETS UserServiceLLVM DESTINATION ./)
+
+
