--- a/socialNetwork/config/service-config.json
+++ b/socialNetwork/config/service-config.json
@@ -1,188 +1,188 @@
 {
-  "secret": "secret",
-  "social-graph-service": {
-    "addr": "social-graph-service",
-    "port": 9090,
-    "connections": 512,
-    "timeout_ms": 10000,
-    "keepalive_ms": 10000
-  },
-  "social-graph-mongodb": {
-    "addr": "social-graph-mongodb",
-    "port": 27017,
-    "connections": 512,
-    "timeout_ms": 10000,
-    "keepalive_ms": 10000
-  },
-  "social-graph-redis": {
-    "addr": "social-graph-redis",
-    "port": 6379,
-    "connections": 512,
-    "timeout_ms": 10000,
-    "keepalive_ms": 10000
-  },
-  "write-home-timeline-service": {
-    "addr": "write-home-timeline-service",
-    "port": 9090,
-    "workers": 32,
-    "connections": 512,
-    "timeout_ms": 10000,
-    "keepalive_ms": 10000
-  },
-  "write-home-timeline-rabbitmq": {
-    "addr": "write-home-timeline-rabbitmq",
-    "port": 5672,
-    "connections": 512,
-    "timeout_ms": 10000,
-    "keepalive_ms": 10000
-  },
-  "home-timeline-redis": {
-    "addr": "home-timeline-redis",
-    "port": 6379,
-    "connections": 512,
-    "timeout_ms": 10000,
-    "keepalive_ms": 10000
-  },
   "compose-post-service": {
+    "connections": 512,
     "addr": "compose-post-service",
     "port": 9090,
-    "connections": 512,
-    "timeout_ms": 10000,
-    "keepalive_ms": 10000
+    "keepalive_ms": 10000,
+    "timeout_ms": 10000
   },
   "compose-post-redis": {
+    "connections": 512,
     "addr": "compose-post-redis",
     "port": 6379,
-    "connections": 512,
-    "timeout_ms": 10000,
-    "keepalive_ms": 10000
-  },
-  "user-timeline-service": {
-    "addr": "user-timeline-service",
-    "port": 9090,
-    "connections": 512,
-    "timeout_ms": 10000,
-    "keepalive_ms": 10000
-  },
-  "user-timeline-mongodb": {
-    "addr": "user-timeline-mongodb",
-    "port": 27017,
-    "connections": 512,
-    "timeout_ms": 10000,
-    "keepalive_ms": 10000
-  },
-  "user-timeline-redis": {
-    "addr": "user-timeline-redis",
-    "port": 6379,
-    "connections": 512,
-    "timeout_ms": 10000,
-    "keepalive_ms": 10000
-  },
-  "post-storage-service": {
-    "addr": "post-storage-service",
-    "port": 9090,
-    "connections": 512,
-    "timeout_ms": 10000,
-    "keepalive_ms": 10000
-  },
-  "post-storage-mongodb": {
-    "addr": "post-storage-mongodb",
-    "port": 27017,
-    "connections": 512,
-    "timeout_ms": 10000,
-    "keepalive_ms": 10000
-  },
-  "post-storage-memcached": {
-    "addr": "post-storage-memcached",
-    "port": 11211,
-    "connections": 512,
-    "timeout_ms": 10000,
-    "keepalive_ms": 10000
-  },
-  "unique-id-service": {
-    "addr": "unique-id-service",
-    "port": 9090,
-    "connections": 512,
-    "timeout_ms": 10000,
     "keepalive_ms": 10000,
-    "netif": "eth0"
-  },
-  "media-service": {
-    "addr": "media-service",
-    "port": 9090,
-    "connections": 512,
-    "timeout_ms": 10000,
-    "keepalive_ms": 10000
-  },
-  "text-service": {
-    "addr": "text-service",
-    "port": 9090,
-    "connections": 512,
-    "timeout_ms": 10000,
-    "keepalive_ms": 10000
+    "timeout_ms": 10000
   },
   "user-mention-service": {
+    "connections": 512,
     "addr": "user-mention-service",
     "port": 9090,
+    "keepalive_ms": 10000,
+    "timeout_ms": 10000
+  },
+  "media-service": {
     "connections": 512,
-    "timeout_ms": 10000,
-    "keepalive_ms": 10000
+    "addr": "media-service",
+    "port": 9090,
+    "keepalive_ms": 10000,
+    "timeout_ms": 10000
+  },
+  "post-storage-mongodb": {
+    "connections": 512,
+    "addr": "post-storage-mongodb",
+    "port": 27017,
+    "keepalive_ms": 10000,
+    "timeout_ms": 10000
   },
   "url-shorten-service": {
+    "connections": 512,
     "addr": "url-shorten-service",
     "port": 9090,
-    "connections": 512,
-    "timeout_ms": 10000,
-    "keepalive_ms": 10000
-  },
-  "url-shorten-memcached": {
-    "addr": "url-shorten-memcached",
-    "port": 11211,
-    "connections": 512,
-    "timeout_ms": 10000,
-    "keepalive_ms": 10000
-  },
-  "url-shorten-mongodb": {
-    "addr": "url-shorten-mongodb",
-    "port": 27017,
-    "connections": 512,
-    "timeout_ms": 10000,
-    "keepalive_ms": 10000
-  },
-  "user-service": {
-    "addr": "user-service",
-    "port": 9090,
-    "connections": 512,
-    "timeout_ms": 10000,
     "keepalive_ms": 10000,
-    "netif": "eth0"
-  },
-  "user-memcached": {
-    "addr": "user-memcached",
-    "port": 11211,
-    "connections": 512,
-    "timeout_ms": 10000,
-    "keepalive_ms": 10000
-  },
-  "user-mongodb": {
-    "addr": "user-mongodb",
-    "port": 27017,
-    "connections": 512,
-    "timeout_ms": 10000,
-    "keepalive_ms": 10000
+    "timeout_ms": 10000
   },
   "home-timeline-service": {
+    "connections": 512,
     "addr": "home-timeline-service",
     "port": 9090,
+    "keepalive_ms": 10000,
+    "timeout_ms": 10000
+  },
+  "url-shorten-memcached": {
     "connections": 512,
+    "addr": "url-shorten-memcached",
+    "port": 11211,
+    "keepalive_ms": 10000,
+    "timeout_ms": 10000
+  },
+  "user-memcached": {
+    "connections": 512,
+    "addr": "user-memcached",
+    "port": 11211,
+    "keepalive_ms": 10000,
+    "timeout_ms": 10000
+  },
+  "user-service": {
+    "port": 9090,
+    "connections": 512,
+    "keepalive_ms": 10000,
     "timeout_ms": 10000,
-    "keepalive_ms": 10000
+    "addr": "user-service",
+    "netif": "eth0"
+  },
+  "social-graph-mongodb": {
+    "connections": 512,
+    "addr": "social-graph-mongodb",
+    "port": 27017,
+    "keepalive_ms": 10000,
+    "timeout_ms": 10000
+  },
+  "post-storage-memcached": {
+    "connections": 512,
+    "addr": "post-storage-memcached",
+    "port": 11211,
+    "keepalive_ms": 10000,
+    "timeout_ms": 10000
+  },
+  "user-timeline-mongodb": {
+    "connections": 512,
+    "addr": "user-timeline-mongodb",
+    "port": 27017,
+    "keepalive_ms": 10000,
+    "timeout_ms": 10000
+  },
+  "secret": "secret",
+  "social-graph-redis": {
+    "connections": 512,
+    "addr": "social-graph-redis",
+    "port": 6379,
+    "keepalive_ms": 10000,
+    "timeout_ms": 10000
+  },
+  "post-storage-service": {
+    "connections": 512,
+    "addr": "post-storage-service",
+    "port": 9090,
+    "keepalive_ms": 10000,
+    "timeout_ms": 10000
+  },
+  "text-service": {
+    "connections": 512,
+    "addr": "text-service",
+    "port": 9090,
+    "keepalive_ms": 10000,
+    "timeout_ms": 10000
+  },
+  "write-home-timeline-rabbitmq": {
+    "connections": 512,
+    "addr": "write-home-timeline-rabbitmq",
+    "port": 5672,
+    "keepalive_ms": 10000,
+    "timeout_ms": 10000
+  },
+  "write-home-timeline-service": {
+    "port": 9090,
+    "connections": 512,
+    "workers": 32,
+    "keepalive_ms": 10000,
+    "timeout_ms": 10000,
+    "addr": "write-home-timeline-service"
+  },
+  "social-graph-service": {
+    "connections": 512,
+    "addr": "social-graph-service",
+    "port": 9090,
+    "keepalive_ms": 10000,
+    "timeout_ms": 10000
+  },
+  "user-timeline-service": {
+    "connections": 512,
+    "addr": "user-timeline-service",
+    "port": 9090,
+    "keepalive_ms": 10000,
+    "timeout_ms": 10000
   },
   "ssl": {
-    "enabled": false,
-    "caPath": "/keys/CA.pem",
     "ciphers": "ALL:!ADH:!LOW:!EXP:!MD5:@STRENGTH",
     "serverKeyPath": "/keys/server.key",
+    "enabled": false,
+    "caPath": "/keys/CA.pem",
     "serverCertPath": "/keys/server.crt"
+  },
+  "unique-id-service": {
+    "port": 9090,
+    "connections": 512,
+    "keepalive_ms": 10000,
+    "timeout_ms": 10000,
+    "addr": "unique-id-service",
+    "netif": "eth0"
+  },
+  "url-shorten-mongodb": {
+    "connections": 512,
+    "addr": "url-shorten-mongodb",
+    "port": 27017,
+    "keepalive_ms": 10000,
+    "timeout_ms": 10000
+  },
+  "user-mongodb": {
+    "connections": 512,
+    "addr": "user-mongodb",
+    "port": 27017,
+    "keepalive_ms": 10000,
+    "timeout_ms": 10000
+  },
+  "home-timeline-redis": {
+    "connections": 512,
+    "addr": "home-timeline-redis",
+    "port": 6379,
+    "keepalive_ms": 10000,
+    "timeout_ms": 10000
+  },
+  "user-timeline-redis": {
+    "connections": 512,
+    "addr": "user-timeline-redis",
+    "port": 6379,
+    "keepalive_ms": 10000,
+    "timeout_ms": 10000
   }
 }
